feat: add admin dashbaord layout

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,8 @@
     "**/*.tsx",
     ".next/types/**/*.ts",
     ".next/dev/types/**/*.ts",
-    "**/*.mts"
+    "**/*.mts",
+    "components/admin/app-sidebar.tsx"
   ],
   "exclude": ["node_modules"]
 }
