feat: Implement tour management API and forms, add location data utilities, and introduce new UI components, alongside renaming the middleware.

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@tanstack/react-query": "^5.90.16",
     "axios": "^1.13.2",
     "better-auth": "^1.4.10",
+    "cities.json": "^1.1.50",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.25.0",
