feat(destinations): fetch and display dynamic regions and countries
- Replace static region data with dynamic fetch from API in destinations page
- Add loading state and search filter for regions and countries
- Show loading spinner while fetching destinations
- Update region and country cards to use fetched data with fallback images
- Adjust home page to load top or fallback regions dynamically from API
- Replace default static quick destinations grid with dynamic regions
- Add social media links input section in admin site settings page
- Create admin dashboard with stats on users, tours, destinations, bookings, revenue
- Display recent bookings and popular tours in admin dashboard
- Add quick action links for tour creation, destinations, bookings, users
- Add date-fns dependency for date formatting in admin dashboard

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "cities.json": "^1.1.50",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.25.0",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
