--- a/package.json
+++ b/package.json
@@ -32,6 +32,11 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@tanstack/react-query": "^5.90.16",
+    "@tiptap/extension-image": "^3.17.0",
+    "@tiptap/extension-link": "^3.17.0",
+    "@tiptap/extension-youtube": "^3.17.0",
+    "@tiptap/react": "^3.17.0",
+    "@tiptap/starter-kit": "^3.17.0",
     "axios": "^1.13.2",
     "better-auth": "^1.4.10",
     "cities.json": "^1.1.50",
@@ -47,6 +52,7 @@
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.71.0",
     "react-icons": "^5.5.0",
+    "slugify": "^1.6.6",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "vaul": "^1.1.2",
